Updated background color for messages. Decreesed max width of Chat modal. Fixed last character being cut off when hitting enter in textarea. Updated font size and style for messages and handles. Added time to name on message. Added background color for messages to distinguish between self and server. Added ServerMessage method to specifically send server messages for formatting. Added link/image/code formatting functionality.

--- a/WebSignalR/wwwroot/css/site.css
+++ b/WebSignalR/wwwroot/css/site.css
@@ -6,17 +6,20 @@ for details on configuring this project to bundle and minify static web assets. 
     bottom: 0px;
     right: 0px;
     margin: 0px;
-    max-width: 400px;
+    max-width: 350px;
 }
 
 .modal-header {
-    max-width: 400px;
+    max-width: 350px;
 }
 
 .modal-body {
-    max-height: 300px;
+    max-height: 250px;
     overflow: auto;
-    max-width: 400px;
+}
+
+.modal-footer {
+    max-width: 300px;
 }
 
 .modal {
